# HPRS

./: .gitignore  CMakeLists.txt  README.md  boostrap_velassco.sh  build-eddieCluster.sh  ice_tHbase.cpp  testclient.cpp
cmake/: FindThrift.cmake
examples/: CMakeLists.txt  asyncServer.cxx  connection.hpp  simple_client.cpp
java/hbase/hbase-coprocessors/: .project  pom.xml
java/hbase/hbase-coprocessors/RPCs/: RowCountRPC.proto
java/hbase/hbase-coprocessors/src/main/java/com/velassco/hbase/: VelasscoScan.java
java/hbase/hbase-coprocessors/src/main/java/com/velassco/hbase/coprocessors/: RowCountRPC.java  VelasscoCoProcessorCountRows.java
java/hbase/hbase-coprocessors/src/test/java/com/velassco/hbase/: AppTest.java
model/: Frame.h  Particle.h
rendering_server/: CMakeLists.txt
rendering_server/include/: connector.h  rendering_utils.hxx
rendering_server/source/: server.cxx
thrift/: build.sh  build_velassco_thrifthbase.sh  hbase_thrift_client.cpp  testclient.cpp
thrift/hbase_thrift/gen-cpp/: Hbase.cpp  Hbase.h  Hbase_types.cpp  Hbase_types.h  hbase
utility/: binaryConverter.h  server_details.h  timer.h  utils.h
